--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ContentPickerCreateItem.EditExtension.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ContentPickerCreateItem.EditExtension.cshtml
@@ -78,7 +78,8 @@
                     title_content: '@Model.TitleContent',
                     published: '@Model.Published'.toLowerCase(),
                     remove_text: '@T("Remove")',
-                    not_published: '@T("Not Published")'
+                    not_published: '@T("Not Published")',
+
                 };
 
                 window.opener.CallParent(result);
