--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ContentPickerCreateItem.EditExtension.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ContentPickerCreateItem.EditExtension.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Laser.Orchard.StartupConfig.ContentPickerContentCreation.ViewModels.SelectButton
 
+@using Orchard;
+@using Orchard.ContentManagement;
 @using Orchard.Environment.Configuration;
 
 <fieldset id="cp-creation">
@@ -13,12 +15,8 @@
     Script.Require("jQueryUI_Tabs").AtHead();
     Style.Require("ContentPickerCreation").AtHead();
 
-    var correcturl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
-    var settings = WorkContext.Resolve<ShellSettings>();
-    var prefix = settings.RequestUrlPrefix;
-    if (!string.IsNullOrEmpty(prefix)) {
-        correcturl += '/' + prefix;
-    }
+    IOrchardServices _orchardServices;
+    WorkContext.TryResolve<IOrchardServices>(out _orchardServices);
 }
 
 @using (Script.Foot()) {
@@ -78,14 +76,23 @@
             $('#main').css('margin-left', '20px');
             $('#main').css('margin-right', '20px');
 
-
+            // Preparo oggetto per callback
             $("#btn-cp-creation").on("click", function () {
-                //try {
-                var container = $(this).closest("[data-id]");
+                @{
+                    var editUrl = "";
+                    if (Model.IdContent != 0) {
+                        var content = _orchardServices.ContentManager.Get(Model.IdContent, VersionOptions.Latest);
+                        if (content != null) {
+                            ContentItemMetadata metadata = _orchardServices.ContentManager.GetItemMetadata(content);
+                            editUrl = Url.RouteUrl(metadata.EditorRouteValues);
+                        }
+                    }
+                }
+
                 var result = {
                     idcontent: '@Model.IdContent',
                     namecpfiels: '@Model.NameCPFiels',
-                    edit_link: '@(correcturl + "/" + Model.IdContent)',
+                    edit_link: '@editUrl',
                     title_content: '@Model.TitleContent',
                     published: '@Model.Published'.toLowerCase(),
                     remove_text: '@T("Remove")',
@@ -93,11 +100,7 @@
 
                 };
 
-                window.opener.CallParent(result);
-                //} catch (ex) {
-                //    alert($.contentPicker.cannotPerformMsg);
-                //    alert(ex);
-                //}
+                    window.opener.CallParent(result);
                 window.close();
             });
         });
