--- a/src/Modules/Laser.Orchard.Reporting/Views/Report/EditHql.cshtml
+++ b/src/Modules/Laser.Orchard.Reporting/Views/Report/EditHql.cshtml
@@ -19,6 +19,7 @@
         <fieldset>
             <label for="QueryId">@T("Query")</label>
             @Html.DropDownListFor(c => c.QueryId, Model.Queries, new { @class = "select-medium" })
+            <a class="button primaryAction" href="@Url.Action("Edit", "MyQueryAdmin", new { area = "Laser.Orchard.Queries", @Id="0" })">@T("New HQL Query")</a>
             <span class="hint">@T("You can specify filters in your HQL query using tokens like {Request.Form:*}. Then you have to add a field for each filter to your Data Report Viewer Content Type to enable users to set filters.")</span>
             @Html.ValidationMessageFor(c => c.QueryId)
         </fieldset>
