--- a/src/Modules/Laser.Orchard.Reporting/Views/Report/ShowReports.cshtml
+++ b/src/Modules/Laser.Orchard.Reporting/Views/Report/ShowReports.cshtml
@@ -5,9 +5,11 @@
     @Html.LabelFor(m => m.TitleFilter)
     @Html.TextBoxFor(m => m.TitleFilter)
     <button type="submit">@T("Apply Filter")</button>
-    foreach (var ct in Model.ContentTypes) {
-        <a class="button" href="@(Model.BaseUrlForCreate + ct)">Create @ct</a>
-    }
+    <div style="margin-top:0.5em;margin-bottom:0.5em">
+        @foreach (var ct in Model.ContentTypes) {
+            <a class="button" href="@(Model.BaseUrlForCreate + ct.Name)">@T("Create") @ct.DisplayName</a>
+        }
+    </div>
 }
 <table class="items" cellpadding="0" cellspacing="0">
     <thead>
