--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ContentPickerCreateItem.EditExtension.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/ContentPickerCreateItem.EditExtension.cshtml
@@ -1,58 +1,29 @@
-﻿@model Laser.Orchard.StartupConfig.ContentPickerContentCreation.ViewModels.SelectButton
+﻿@model Laser.Orchard.StartupConfig.ContentPickerContentCreation.ViewModels.ContentPickerCreationWindowVM
 
 @using Orchard;
 @using Orchard.ContentManagement;
-@using Orchard.Environment.Configuration;
-
-<fieldset id="cp-creation">
-    <input type="button" id="btn-cp-creation" value="@T("Select")" class="button ">
-</fieldset>
-@Html.HiddenFor(m => m.Callback)
-@Html.HiddenFor(m => m.IdContent)
-@Html.HiddenFor(m => m.NameCPField)
-@Html.HiddenFor(m => m.TitleContent, new { id = "Laser_Orchard_ContentPickerContentCreation_TitleContent" })
 
 @{
-    Script.Require("jQueryUI_Tabs").AtHead();
     Style.Require("ContentPickerCreation").AtHead();
-    Style.Require("ContentPickerThemeHiding").AtHead();
+    Script.Require("ContentPickerThemeHiding").AtHead();
 
     IOrchardServices _orchardServices;
     WorkContext.TryResolve<IOrchardServices>(out _orchardServices);
 }
 
+<fieldset id="cp-creation">
+    <input type="button" id="btn-cp-creation" value="@T("Select")" class="button ">
+</fieldset>
+@Html.HiddenFor(m => m.IdContent)
+@Html.HiddenFor(m => m.TitleContent, new { id = "Laser_Orchard_ContentPickerContentCreation_TitleContent" })
+@Html.HiddenFor(m => m.TypeContent)
+
 @using (Script.Foot()) {
     <script type="text/javascript">
         //<![CDATA[
         $(document).ready(function () {
-            // Aggiungo i parametri di querystring ai form per mantenerli in caso di errore in fase di salvataggio
-            @if(Request.QueryString["callback"] != null) {
-                var queryString = "";
-                foreach(string key in Request.QueryString.AllKeys) {
-                    if (!string.IsNullOrWhiteSpace(queryString)) {
-                        queryString += "&";
-                    }
-                    queryString += key + "=" + @Request.QueryString[key];
-                }
-                <text>
-                $('#content form').each(function () {
-                    var formUrl = $(this).attr('action');
-                    formUrl += formUrl.indexOf('?') != -1 ? '&' : '?';
-                    formUrl += '@Html.Raw(queryString)';
-
-                    $(this).attr('action', formUrl);
-                });
-                </text>
-            }else if(Model.Callback != null && Model.Callback != ""){
-                <text>
-                $('#content form').each(function () {
-                    var formUrl = $(this).attr('action');
-                    formUrl += formUrl.indexOf('?') != -1 ? '&' : '?';
-                    formUrl += '@Html.Raw(Model.Callback)';
-
-                    $(this).attr('action', formUrl);
-                });
-                </text>
+            if (window.sessionStorage.getItem("cpfCreationSession") != null) {
+                enableSelectButton();
             }
 
             // Disabilito il tasto di selezione se il contenuto non è stato ancora salvato
@@ -74,16 +45,16 @@
                     }
                 }
                 try {
-                var result = {
-                    idcontent: '@Model.IdContent',
-                    namecpfield: '@Model.NameCPField',
-                    edit_link: '@editUrl',
-                    title_content: $('#Laser_Orchard_ContentPickerContentCreation_TitleContent').val(),
-                    published: '@Model.Published'.toLowerCase(),
-                    remove_text: '@T("Remove")',
-                    not_published: '@T("Not Published")',
+                    var result = {
+                        idcontent: '@Model.IdContent',
+                        namecpfield: window.sessionStorage.getItem("cpfName"),
+                        edit_link: '@editUrl',
+                        title_content: $('#Laser_Orchard_ContentPickerContentCreation_TitleContent').val(),
+                        published: '@Model.Published'.toLowerCase(),
+                        remove_text: '@T("Remove")',
+                        not_published: '@T("Not Published")',
 
-                };
+                    };
 
                     window.opener.CallParent(result);
                 } catch (ex) {
@@ -92,6 +63,18 @@
                 window.close();
             });
         });
+
+        function injectThemeHidingCss() {
+            $('head').append('<link href="/Orchard/Modules/Laser.Orchard.StartupConfig/styles/contentPickerCreation/ContentPickerThemeHiding.css" rel="stylesheet" type="text/css" />');
+        }
+
+        function enableSelectButton() {
+            if (window.sessionStorage.getItem("ctName") == '@Model.TypeContent') {
+                $('#cp-creation').show();
+            } else {
+                $('#cp-creation').hide();
+            }
+        }
     //]]>
     </script>
 }
