--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
@@ -1,10 +1,14 @@
 ﻿@using Contrib.Widgets.Models;
+@using Orchard;
+@using Orchard.ContentManagement;
 @using Orchard.Core.Contents;
 @using Orchard.Environment.Extensions.Models;
 @using Orchard.Localization.Models;
 @using Orchard.Security;
 @using Orchard.Utility.Extensions;
 @using Orchard.Core.Common.Models;
+@using System.Web.Mvc;
+@using System.Web.Routing;
 
 @{
     Style.Require("TheAdminWidgetContainerStyle");
@@ -13,6 +17,9 @@
 
     Script.Include("~/Themes/TheAdmin/scripts/admin.js");
 
+    IOrchardServices _orchardServices;
+    WorkContext.TryResolve<IOrchardServices>(out _orchardServices);
+
     var zones = Model.Zones;
     var theme = (ExtensionDescriptor)Model.CurrentTheme;
     var zonePreviewImage = (string)Model.ZonePreviewImage;
@@ -20,6 +27,12 @@
     var contentItem = Model.ContentItem;
     var localizedContent = Model.ContentLocalizations != null ? (IEnumerable<LocalizationPart>)Model.ContentLocalizations : new List<LocalizationPart>();
     var selectListForLocalizedContent = new SelectList(localizedContent, "Id", "Culture.Culture", 0);
+
+    ContentItemMetadata metadata = _orchardServices.ContentManager.GetItemMetadata(Model.ContentItem);
+    RouteValueDictionary createRouteValues = metadata.CreateRouteValues;
+
+    var inCreateRoute = Url.RouteUrl(ViewContext.RouteData.Values) == Url.RouteUrl(createRouteValues);
+
 }
 
 <fieldset id="widgetsPlacement">
@@ -46,14 +59,16 @@
                         <ol>
                             @foreach (var zone in zones) {
                                 var widgets = allWidgets.Where(x => x.Zone == zone).OrderBy(w => w.Position, new Orchard.UI.FlatPositionComparer());
-                                var addWidgetUrl = contentItem.Id != 0
+                                var contentCreated = (contentItem.Id != 0 && !inCreateRoute);
+                                var addWidgetUrl = contentCreated
                                                        ? Url.Action("ListWidgets", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, zone })
                                                        : Url.Action("CreateContent", "Admin", new { area = "Contrib.Widgets", id = contentItem.ContentType, zone });
+                                var contentId = contentCreated ? contentItem.Id : 0;
 
                                 <li>
                                     <h2>@zone</h2>
                                     <div class="zone-actions">
-                                        <a class="button grey add-widget" href="@addWidgetUrl" data-host-id="@contentItem.Id">@T("Add")</a>
+                                        <a class="button grey add-widget" href="@addWidgetUrl" data-host-id="@contentId">@T("Add")</a>
                                     </div>
                                     <ul class="widgets" data-zone="@zone" id="@zone">
                                         @foreach (var widget in widgets) {
@@ -80,40 +95,40 @@
                                                                 scheduledTitle += "; ";
                                                             }
                                                             scheduledTime = true;
-                                                            scheduledTitle += " " + @T("Scheduled Archive") + ": " +  @Display.DateTime(DateTimeUtc: archiveLaterPart.ScheduledArchiveUtc.Value, CustomFormat: null).ToString();
+                                                            scheduledTitle += " " + @T("Scheduled Archive") + ": " + @Display.DateTime(DateTimeUtc: archiveLaterPart.ScheduledArchiveUtc.Value, CustomFormat: null).ToString();
                                                         }
                                                     }
                                                 }
                                                 <h3>
                                                     <a href="@Url.Action("EditWidget", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, id = widget.Id, returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">@Html.ItemDisplayText(widget)</a>
                                                 </h3><span>
-                                                    <div class="contentType"> - @widget.TypeDefinition.DisplayName 
+                                                    <div class="contentType">
+                                                        - @widget.TypeDefinition.DisplayName
                                                         @if (scheduledTime) {
-                                                          <img class="icon scheduledDates" src="@Href("~/Modules/Orchard.PublishLater/Content/Admin/images/scheduled.gif")" data-html="true" rel="tooltip" alt="@T("Scheduled")" title="@scheduledTitle" style="white-space: pre-wrap;"/>
+                                                            <img class="icon scheduledDates" src="@Href("~/Modules/Orchard.PublishLater/Content/Admin/images/scheduled.gif")" data-html="true" rel="tooltip" alt="@T("Scheduled")" title="@scheduledTitle" style="white-space: pre-wrap;" />
                                                         }
                                                     </div>
-                                                <div class="widget-actions">
-                                                    @if (widget.IsPublished) {
-                                                        if (widget.HasDraft) {
+                                                    <div class="widget-actions">
+                                                        @if (widget.IsPublished) {
+                                                            if (widget.HasDraft) {
+                                                                if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
+                                                                    @Html.Link(T("Publish Draft").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.ToUrlString() }), new { itemprop = "UnsafeUrl" })
+                                                                    @T(" | ")
+                                                                }
+                                                            }
+
                                                             if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
-                                                                @Html.Link(T("Publish Draft").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.ToUrlString() }), new { itemprop = "UnsafeUrl" })
+                                                                @Html.Link(T("Unpublish").Text, Url.Action("Unpublish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.ToUrlString() }), new { itemprop = "UnsafeUrl" })
+                                                                @T(" | ")
+                                                            }
+                                                        } else {
+                                                            if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
+                                                                @Html.Link(T("Publish").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.ToUrlString() }), new { itemprop = "UnsafeUrl" })
                                                                 @T(" | ")
                                                             }
                                                         }
-
-                                                        if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
-                                                            @Html.Link(T("Unpublish").Text, Url.Action("Unpublish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.ToUrlString() }), new { itemprop = "UnsafeUrl" })
-                                                            @T(" | ")
-                                                        }
-                                                    }
-                                                    else {
-                                                        if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
-                                                            @Html.Link(T("Publish").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.ToUrlString() }), new { itemprop = "UnsafeUrl" })
-                                                            @T(" | ")
-                                                        }
-                                                    }
-                                                    <a href="#" class="remove-widget" data-confirm="@T("Are you sure you want to delete this widget? Note: the widget will be removed permanently when you save the content item.")">@T("Remove")</a>
-                                                </div>
+                                                        <a href="#" class="remove-widget" data-confirm="@T("Are you sure you want to delete this widget? Note: the widget will be removed permanently when you save the content item.")">@T("Remove")</a>
+                                                    </div>
                                             </li>
                                         }
                                     </ul>
